--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1 id="banner"><span id="my-name"></span>'s Awesome Animation</h1>
     <div id="p5-canvas"></div>
+    <iframe style ="display: none;" width="560" height="315" src="https://www.youtube.com/embed/1JXhfYrRSd8?start=1?rel=0&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     <!-- scripts -->
     <script src="lib/p5.min.js"></script>
     <script src="lib/p5.dom.min.js"></script>
